# simple-digital-signature

./: .gitignore  CMakeLists.txt  main.cpp
cryptographic/: cryptographic.h
cryptographic-hash/: cryptographic_hash.cpp  cryptographic_hash.h
cryptographic-provider/: cryptographic_provider.cpp  cryptographic_provider.h
cryptographic/hash/: hash.cpp  hash.h
cryptographic/provider/: provider.cpp  provider.h
doc-signer/: doc_signer.cpp  doc_signer.h
file-hash-calculator/: file_hash_calculator.cpp  file_hash_calculator.h
file-hasher/: file_hasher.cpp  file_hasher.h
hash-calculator/: hash_calculator.cpp  hash_calculator.h
io-tools/: io_tools.cpp  io_tools.h
key-sing-manager/: key_sign_manager.cpp  key_sign_manager.h
keygen/: keygen.cpp  keygen.h
